[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = ""
authors = ["saul <luckly083@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
selenium = "^4.18.1"
ruff = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
